Improvements for security, not relying on